--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "inserturlparams": "^2.0.5",
-    "jet-env": "^1.1.4",
     "jet-logger": "^2.0.1",
     "jet-paths": "^1.1.0",
     "jet-validators": "^1.4.3",
     "jsonfile": "^6.2.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
+    "pg": "^8.13.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jsonfile": "^6.1.4",
     "@types/module-alias": "^2.0.4",
+    "@types/pg": "^8.11.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.0",
     "@types/supertest": "^6.0.3",
@@ -49,7 +50,6 @@
     "fs-extra": "^11.3.2",
     "jiti": "^2.6.1",
     "nodemon": "^3.1.10",
-    "prisma": "^6.19.0",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
