<Feat> mysql version test success userSchema

--- a/config/.env.development
+++ b/config/.env.development
@@ -1,15 +1,10 @@
-## Environment ##
 NODE_ENV=development
-
-
-## Server ##
 PORT=3000
 HOST=localhost
 
+DATABASE_URL=mysql://damara:Ww001009!@localhost:3306/damara
 
-## Setup jet-logger ##
 JET_LOGGER_MODE=CONSOLE
 JET_LOGGER_FILEPATH=jet-logger.log
 JET_LOGGER_TIMESTAMP=TRUE
 JET_LOGGER_FORMAT=LINE
-
