--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.19",
@@ -30,10 +31,12 @@
     "logger": "^0.0.1",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "pg": "^8.16.3",
     "routes": "^2.1.0",
     "sequelize": "^6.37.7",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -51,6 +54,7 @@
     "@types/node": "^24.10.0",
     "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-n": "^17.23.1",
     "find": "^0.3.0",
