<Feat> webhw3 db migration success

--- a/config/.env.development
+++ b/config/.env.development
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=3000
 HOST=localhost
 
-DATABASE_URL=mysql://damara:Ww001009!@localhost:3306/damara
+   DATABASE_URL=mysql://damara:Ww001009!@localhost:3306/webhw3
 
 JET_LOGGER_MODE=CONSOLE
 JET_LOGGER_FILEPATH=jet-logger.log
