<Feat> npm start 가능하게 끔 리팩토링

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "damara-BE",
   "version": "0.0.0",
   "scripts": {
-    "build": "ts-node ./scripts/build.ts",
-    "clean-install": "rm -rf ./node_modules && rm -r package-lock.json && npm i",
-    "dev": "NODE_ENV=development ts-node ./src/server.ts",
+    "dev": "NODE_ENV=development ts-node --files ./src/server.ts",
     "dev:hot": "nodemon --exec \"npm run dev\" --watch ./src --ext .ts",
+    "build": "tsc",
+    "start": "NODE_ENV=production ts-node --files ./src/server.ts",
     "lint": "eslint .",
-    "start": "NODE_ENV=production node -r ./config.js ./dist",
+    "clean-install": "rm -rf ./node_modules && rm -rf package-lock.json && npm i",
     "test": "NODE_ENV=test vitest",
     "type-check": "tsc --noEmit"
   },
@@ -23,18 +23,13 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "inserturlparams": "^2.0.5",
-    "jet-env": "^1.1.4",
     "jet-logger": "^2.0.1",
-    "jet-paths": "^1.1.0",
-    "jet-validators": "^1.4.3",
     "jsonfile": "^6.2.0",
-    "logger": "^0.0.1",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "pg": "^8.16.3",
-    "routes": "^2.1.0",
     "sequelize": "^6.37.7",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
@@ -46,7 +41,6 @@
     "@swc/core": "^1.15.1",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
-    "@types/find": "^0.2.4",
     "@types/fs-extra": "^11.0.4",
     "@types/jsonfile": "^6.1.4",
     "@types/module-alias": "^2.0.4",
