--- a/config/.env.production
+++ b/config/.env.production
@@ -1,12 +1,13 @@
 ## Environment ##
 NODE_ENV=production
 
-
 ## Server ##
-PORT=8081
+PORT=3000
 HOST=localhost
 DISABLE_HELMET=TRUE
 
+## Database ##
+DATABASE_URL=mysql://damara:Ww001009!@localhost:3306/webhw3
 
 ## Setup jet-logger ##
 JET_LOGGER_MODE=FILE
