--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
+    "chokidar": "^4.0.3",
     "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
