배포 설정 추가: Railway 배포 및 Swagger 설정

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "NODE_ENV=development ts-node --files ./src/server.ts",
     "dev:hot": "nodemon --exec \"npm run dev\" --watch ./src --ext .ts",
     "build": "tsc",
-    "start": "NODE_ENV=production ts-node --files ./src/server.ts",
+    "start": "node dist/server.js",
+    "start:dev": "NODE_ENV=production ts-node --files ./src/server.ts",
     "lint": "eslint .",
     "clean-install": "rm -rf ./node_modules && rm -rf package-lock.json && npm i",
     "test": "NODE_ENV=test vitest",
