chore: add environment-specific config files (dev/prod) and fix local DB connection

--- a/config/.env.production
+++ b/config/.env.production
@@ -3,11 +3,15 @@ NODE_ENV=production
 
 ## Server ##
 PORT=3000
-HOST=localhost
+HOST=0.0.0.0
 DISABLE_HELMET=TRUE
 
-## Database ##
-DATABASE_URL=mysql://damara:Ww001009!@localhost:3306/webhw3
+## Database (AWS RDS) ##
+DB_HOST=3.35.22.88
+DB_USER=admin
+DB_PASSWORD=ww001009!
+DB_NAME=damara
+DB_PORT=3306
 
 ## Setup jet-logger ##
 JET_LOGGER_MODE=FILE
