--- a/config/.env.development
+++ b/config/.env.development
@@ -2,7 +2,11 @@ NODE_ENV=development
 PORT=3000
 HOST=localhost
 
-   DATABASE_URL=mysql://damara:Ww001009!@localhost:3306/webhw3
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=ww001009!
+DB_NAME=damara
+DB_PORT=3306
 
 JET_LOGGER_MODE=CONSOLE
 JET_LOGGER_FILEPATH=jet-logger.log
